app/components/service/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: ggg
  name: service
  labels:
    service_type: service
    service_name: service
spec:
  ports:
  - port: 8080
    name: http
  selector:
    service_name: service
