app/components/service/servicelb.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: ggg
  name: servicelb
  labels:
    service_type: service
    service_name: service
spec:
  ports:
  - port: 8080
    name: http
    targetPort: 8080
  selector:
    service_name: service
  type: LoadBalancer
