app/components/service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: ggg
  name: ggg-ing-org
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: ggg.app.adaptivenetworklab.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ggg
                port:
                  number: 80
